# external-sort

./: .gitignore  CMakeLists.txt  README.md  build-test.sh  fix: hate desmos so much for its links  main.cpp
example/: 10000nums  tape.config
lib/: ISort.h  ITape.h
src/: FileTape.cpp  FileTape.h  FileTapeConfig.h  Helpers.h  TapeSort.h  main.cpp
test/: CMakeLists.txt  TapeTest.cpp
